Prevent borderless buttons from wrapping inside tables.

--- a/src/sass/mys-element-table1.scss
+++ b/src/sass/mys-element-table1.scss
@@ -78,6 +78,8 @@
      margin          : 0 !important;
      margin-right    : 10px !important;
      background-color: transparent !important;
+     text-align      : left;
+     white-space     : nowrap;
    }
 
    .uikit-btn--borderless:hover {
